# esp32-s3-boy_fw

./: .gitignore  .gitmodules  Makefile  README.md
.github/workflows/: build.yml
assets/: doom.squashfs
components/esp32-s3-boy-hal/: CMakeLists.txt
components/esp32-s3-boy-hal/bsp/: bsp.h
components/esp32-s3-boy-hal/common/hw/include/: button.h  log.h  mixer.h
components/esp32-s3-boy-hal/hw/: hw.c  hw_def.h
components/esp32-s3-boy-hal/hw/driver/: adc.c  audio.c  battery.c  button.c  fatfs.c  gpio.c  i2s.c  lcd.c  log.c  sd.c
components/esp32-s3-boy-hal/hw/driver/lcd/: st7789.c
components/squashfs/: CMakeLists.txt  libsquash_decompress.c  libsquash_dirent.c  libsquash_fd.c  squashfs.c
components/squashfs/include/: squashfs.h
fw/s3-boy-doom/: partitions.csv  sdkconfig
fw/s3-boy-doom/main/ap/: ap.cpp
fw/s3-boy-doom/main/ap/doom/src/: d_iwad.c  d_iwad.h  d_main.c  deh_main.c  deh_mapping.h  deh_str.c  deh_str.h  f_finale.c  hu_stuff.c  i_gbsound.c  i_joystick.c  i_sound.c  i_sound.h  i_system.c  i_video.c  i_video.h  m_config.h  s_sound.c  w_main.c  w_wad.c  z_zone.c
fw/squashfs-test/: CMakeLists.txt  sdkconfig
fw/squashfs-test/main/: CMakeLists.txt  squashfs-test.c
