idf_component_register(
    SRCS
        "squashfs.c"
        "lib/zlib/adler32.c"
        "lib/zlib/crc32.c"
        "lib/zlib/gzclose.c"
        "lib/zlib/gzlib.c"
        "lib/zlib/gzread.c"
        "lib/zlib/gzwrite.c"
        "lib/zlib/infback.c"
        "lib/zlib/inffast.c"
        "lib/zlib/inflate.c"
        "lib/zlib/inftrees.c"
        "lib/zlib/trees.c"
        "lib/zlib/uncompr.c"
        "lib/zlib/zutil.c"
        "lib/libsquash/src/cache.c"
        "lib/libsquash/src/decompress.c"
        "lib/libsquash/src/dir.c"
        "lib/libsquash/src/dirent.c"
        "lib/libsquash/src/extract.c"
        "lib/libsquash/src/fd.c"
        "lib/libsquash/src/file.c"
        "lib/libsquash/src/fs.c"
        "lib/libsquash/src/hash.c"
        "lib/libsquash/src/mutex.c"
        "lib/libsquash/src/nonstd-makedev.c"
        "lib/libsquash/src/nonstd-stat.c"
        "lib/libsquash/src/private.c"
        "lib/libsquash/src/readlink.c"
        "lib/libsquash/src/scandir.c"
        "lib/libsquash/src/stack.c"
        "lib/libsquash/src/stat.c"
        "lib/libsquash/src/table.c"
        "lib/libsquash/src/traverse.c"
        "lib/libsquash/src/util.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "lib/zlib"
        "lib/libsquash/include"
    REQUIRES
        "vfs"
)
