idf_component_register(
    SRCS
        "squashfs.c"
        "lib/zlib/adler32.c"
        "lib/zlib/crc32.c"
        "lib/zlib/infback.c"
        "lib/zlib/inffast.c"
        "lib/zlib/inflate.c"
        "lib/zlib/inftrees.c"
        "lib/zlib/trees.c"
        "lib/zlib/uncompr.c"
        "lib/zlib/zutil.c"
        "lib/libsquash/src/cache.c"
        "lib/libsquash/src/decompress.c"
        "lib/libsquash/src/dir.c"
        "lib/libsquash/src/extract.c"
        "lib/libsquash/src/fs.c"
        "lib/libsquash/src/file.c"
        "lib/libsquash/src/hash.c"
        "lib/libsquash/src/mutex.c"
        "lib/libsquash/src/nonstd-stat.c"
        "lib/libsquash/src/private.c"
        "lib/libsquash/src/readlink.c"
        "lib/libsquash/src/scandir.c"
        "lib/libsquash/src/stack.c"
        "lib/libsquash/src/stat.c"
        "lib/libsquash/src/table.c"
        "lib/libsquash/src/traverse.c"
        "lib/libsquash/src/util.c"
        "libsquash_dirent.c"
        "libsquash_fd.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "lib/zlib"
        "lib/libsquash/include"
    REQUIRES
        "vfs"
)

set_source_files_properties(lib/libsquash/src/dirent.c
    PROPERTIES COMPILE_FLAGS -D__linux__)

