idf_component_register(
    SRCS
        "squashfs.c"
        "lib/libsquash/src/cache.c"
        "lib/libsquash/src/dir.c"
        "lib/libsquash/src/extract.c"
        "lib/libsquash/src/file.c"
        "lib/libsquash/src/fs.c"
        "lib/libsquash/src/hash.c"
        "lib/libsquash/src/mutex.c"
        "lib/libsquash/src/nonstd-stat.c"
        "lib/libsquash/src/private.c"
        "lib/libsquash/src/readlink.c"
        "lib/libsquash/src/scandir.c"
        "lib/libsquash/src/stack.c"
        "lib/libsquash/src/stat.c"
        "lib/libsquash/src/table.c"
        "lib/libsquash/src/traverse.c"
        "lib/libsquash/src/util.c"
        "lib/lz4/lib/lz4.c"
        "lib/lz4/lib/lz4file.c"
        "lib/lz4/lib/lz4frame.c"
        "lib/lz4/lib/lz4hc.c"
        "lib/lz4/lib/xxhash.c"
        "libsquash_dirent.c"
        "libsquash_fd.c"
        "libsquash_decompress.c"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "lib/lz4/lib"
        "lib/libsquash/include"
    REQUIRES
        "vfs"
)

set_source_files_properties(lib/libsquash/src/dir.c
    PROPERTIES COMPILE_FLAGS -Wno-stringop-truncation)

